app/assets/styles/base/_core.scss
* {
    max-width: 100vw;
    box-sizing: border-box;
}

html {
    height: 100%;
    width: 100%;
    scrollbar-width: auto;
    scrollbar-color: var(--color-text) var(--color-primary);
}

body {
    width: 100%;
    min-height: 100svh;
    overflow-x: hidden;
    @extend %flex-column;
}

main {
    flex: 1;
    background-color: var(--color-secondary);
    overflow-x: hidden;
}

section {
    min-height: calc(100svh - 8.1rem);
    padding: 2rem 1.5rem;
    overflow-x: hidden;

    @include respond-to('breakpoint-768') {
        padding: 2.5rem 5rem;
    }
}

.section-title {
    cursor: pointer;
    @extend %flex-center;
    margin-bottom: 2.5rem;
    gap: 0.75rem;

    @include respond-to('breakpoint-576') {
        gap: 1rem;
    }

    h2 {
        font-size: calc(0.9 * $font-size-h2);

        @include respond-to('breakpoint-375') {
            font-size: $font-size-h2;
        }

        @include respond-to('breakpoint-576') {
            font-size: calc(1.25 * $font-size-h2);
        }

        @include respond-to('breakpoint-992') {
            font-size: calc(1.75 * $font-size-h2);
        }

        @include respond-to('breakpoint-1200') {
            font-size: calc(2 * $font-size-h2);
        }
    }

    svg {
        height: $font-size-h2;
        width: auto;

        @include respond-to('breakpoint-576') {
            height: calc(0.95 * $font-size-h2);;
        }

        @include respond-to('breakpoint-992') {
            height: calc(1.75 * $font-size-h2);
        }

        @include respond-to('breakpoint-1200') {
            height: calc(2 * $font-size-h2);
        }
    }
}

svg {
    vertical-align: middle;
    fill: var(--color-text);
    height: 1.2rem;
    width: 1.2rem;
}

.overlay {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 0;
    background-color: rgba(var(--color-primary-r), var(--color-primary-g), var(--color-primary-b), 0.95);
}

.inactive {
    cursor: not-allowed !important;
    transition: none !important;
    opacity: 0.5 !important;

    &:hover {
        transform: none !important;
    }
}

.sf-minitoolbar {
    display: none !important;
}

.goog-te-banner-frame,
.goog-te-menu-frame,
.skiptranslate {
    display: none !important;
}

